src/unreferenced_files/tests/singular_searching/snapshots/unreferenced_files__unreferenced_files__tests__singular_searching__found.snap
---
source: src/unreferenced_files/tests/singular_searching/mod.rs
expression: sorted_unreferenced_files
---
[]
